Se aplica color de fondo al botón hamburguesa de los dispositivos moviles al objeto de mejorar su visibilidad. En el fichero contacto.html se implementa grid-system de bootstrap de forma correcta. Se corrige el nesting de algunos campos de formulario en el archivo _formularios.scss

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11296,14 +11296,14 @@ label {
     display: flex;
     justify-content: space-evenly;
   }
-}
-.nom-tel div,
+  .nom-tel div,
 .mail-vacan div,
 .nom-ape div,
 .mail-tel div {
-  min-width: 34.4rem;
-  width: 49%;
-  max-width: 48.2rem;
+    min-width: 34.4rem;
+    width: 49%;
+    max-width: 48.2rem;
+  }
 }
 
 @media (min-width: 1024px) {
@@ -11389,6 +11389,7 @@ h4 {
   z-index: 9999;
   position: fixed;
   border: 2px solid #000000;
+  background-color: aliceblue;
 }
 
 .nav-link {
