--- a/src/scss/ui/_header.scss
+++ b/src/scss/ui/_header.scss
@@ -76,6 +76,7 @@ h4 {
     z-index: 9999;
     position: fixed;
     border: 2px solid $dark;
+    background-color: $primary;
 }
 
 .nav-link {
